<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".activity.MovieDetailActivity"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id='@+id/iv_movie_poster'
                android:layout_width="194dp"
                android:layout_height="250dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/movie_poster"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.043"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id='@+id/tv_title'
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/comfortaa"
                android:text="title"
                android:textAlignment="center"
                android:textColor="#D81B60"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_score"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.723"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="116dp"
                android:background="@drawable/score_image"
                android:contentDescription="@string/favorite_logo"
                app:layout_constraintBottom_toBottomOf="@+id/tv_score"
                app:layout_constraintEnd_toEndOf="@+id/tv_score"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_score"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id='@+id/tv_score'
                android:layout_width="118dp"
                android:layout_height="43dp"
                android:layout_below="@+id/tv_title"
                android:layout_marginStart="8dp"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.951"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id='@+id/tv_duration'
                android:layout_width="139dp"
                android:layout_height="98dp"
                android:paddingTop="8dp"
                android:text='@string/duration'
                android:textAlignment="center"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_score"
                app:layout_constraintVertical_bias="0.0" />

            <ToggleButton
                android:id="@+id/tb_fav"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginStart="8dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="26dp"

                android:layout_marginBottom="43dp"
                android:background="@drawable/favourite_button_selector"
                android:textOff="null"
                android:textOn="null"
                android:textSize="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.68"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.011" />

            <TextView
                android:id='@+id/tv_genre'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#ffcc00"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:text="@string/genre_template"
                android:textColor="#ffffff"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id='@+id/tv_description'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:text="@string/description_template"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
